# fastpickle

./: .gitignore  Makefile  README.md  _pickle.c  aditya_pickletests.py  example  fastpickle.py  main.py  original.c  personaltest.py  pyproject.toml  setup.py  test.py  test_pickle  testpickle.c  thingstomodify.txt  threadpool.c  threadpool.h  threadpooltest.c
.github/workflows/: fastpickle.yml
Include/clinic/: _pickle.c.h
faster_pickle.egg-info/: PKG-INFO  SOURCES.txt
fastpickle/: __init__.py  fastpickle.py
include/custom/: threadpool.h
src/: _fastpickle.c  _pickle.c  threadpool.c
tests/: aditya_pickletests.py  aditya_tests.py  originalpickle.py  script.sh  test_c_pickle.py  test_merge.py
